# OPRoS

./: CMakeLists.txt  OPROS_LICENSE_2.0_en.txt  OPROS_LICENSE_2.0_kr.txt  README.md
cdl/: CTrace.h  InputDataPortInterface.cpp  InputEventPortInterface.cpp  OPRoSUtility.cpp  OSGuard.cpp  OSMutex_Port.cpp  OutputDataPortInterface.cpp  OutputEventPortInterface.cpp  PackageUtil.cpp  PortInterface.cpp  PropertyInterface.cpp  ProvidedServicePort.cpp  RequiredServicePort.cpp  ServicePort.cpp  ServicePortInterface.cpp  SymbolServicePortProvider.cpp  SymbolServicePortProvider.h  opros_common_inc.inc
example/controlTest/RobotController/: CMakeLists.txt
example/controlTest/RobotController/include/: RobotControlProvided.h  RobotControlRequired.h
example/controlTest/RobotController/profile/: RobotControl.xml  RobotController.xml
example/controlTest/RobotController/src/: RobotController.cpp  RobotController.h
example/droneTest/: CMakeLists.txt
example/droneTest/DroneState/: CMakeLists.txt
example/droneTest/DroneState/include/: DroneState.h
example/droneTest/DroneState/profile/: DroneState.xml
example/droneTest/DroneState/src/: DroneState.cpp
example/droneTest/FlightControl/: CMakeLists.txt
example/droneTest/GPS/: CMakeLists.txt
example/hellobrill/profiles/: CBHelloMaker.xml  CBMessagePrinter.xml
example/hellobrill/sources/CBMessagePrinter/: CMakeLists.txt  cmake_install.cmake
example/hellobrill/sources/CBMessagePrinter/include/: MessagePrintProvided.h  MessagePrintRequired.h
example/hellobrill/sources/CBMessagePrinter/src/: CBMessagePrinter.cpp  CBMessagePrinter.h
example/helloworld/profiles/: HelloMaker.xml  MessagePrinter.xml  UserDataType.xml
example/rosExample/MessagePrinter/: CMakeLists.txt  MessagePrinter.xml
example/rosExample/MessagePrinter/src/: MessagePrinter.cpp  MessagePrinter.h
include/device/: AccelerationSensor.h  AccelerationSensorData.h  ApiTypes.h  Bus.h  Camera.h  CameraData.h  DeviceParameters.h  GeoMagneticSensorData.h  GpsData.h  GyroSensorData.h  ImuData.h  InfraredSensor.h  LaserRangeFinder.h  Manipulator.h  ManipulatorControl.h  MobileAccelerationData.h  MobileController.h  MobilePositionData.h  MobileVelocityData.h  ObjectAccelerationData.h  ObjectPositionData.h  ObjectVelocityData.h  OprosDevice.h  OprosLock.h  OprosTimer.h  PositionSensor.h  Property.h  ProximitySensor.h  Uart.h  UltrasonicSensor.h
src/: ArchiveFactory.cpp  ArchiveManager.cpp  ArchiveManager.h  BinaryArchiveFactory.cpp  BinaryArchiveFactory.h  Component.cpp  DataPort.cpp  DataPortConnector.h  DataPortConnectorImpl.cpp  DataPortConnectorImpl.h  DataPortLink.cpp  DataPortLink.h  EngineInterface.h  Event.cpp  EventPort.cpp  EventPortConnector.h  EventPortConnectorImpl.cpp  EventPortConnectorImpl.h  EventPortLink.cpp  EventPortLink.h  LifecycleInterface.cpp  LocalServicePortConnector.cpp  LocalServicePortConnector.h  Method.cpp  Port.cpp  RemoteServicePortConnector.cpp  RemoteServicePortConnector.h  StringArchiveFactory.cpp  StringArchiveFactory.h
src/archive/: opros_archive_common.cpp  opros_binary_iarchive.cpp  opros_binary_oarchive.cpp  opros_iarchive.cpp  opros_oarchive.cpp  opros_raw_iarchive.cpp  opros_raw_oarchive.cpp  opros_string_iarchive.cpp  opros_string_oarchive.cpp
src/executor/: .Executor.cpp.swp  Executor.cpp  Executor.h  ExecutorStarter.cpp  ExecutorStarter.h  ExecutorThreadManager.cpp  ExecutorThreadManager.h
src/ext/: ServiceConsole.cpp  ServiceConsole.h  ServiceConsoleEx.h  ServiceConsoleWorker.cpp  ServiceConsoleWorker.h  WebProtocolHandler.cpp  WebProtocolHandler.h  WebProtocolHandlerWorker.cpp  WebProtocolHandlerWorker.h
src/modconfig/: ModAPIServiceConfig.h  ModConfig.h  ModLibArchiveConfig.h  ModMWAdaptorConfig.h  ModMonitorConfig.h  ModROSConfig.h  ModServiceManagerConfig.h  ModTaskConfig.h  ModVerifyConfig.h
src/system/: ComponentEngine.cpp  ComponentEngine.h  ComponentEngineLoader.cpp  ComponentEngineLoader.h  Log.cpp  Log.h  ManagedObject.cpp  ManagedObject.h  ManagedObjectListener.h  Manager.h  Registry.cpp  Registry.h  SystemMain.cpp  SystemTypes.h  Trace.cpp  Trace.h
src/system/cm/: ComponentAdapter.cpp  ComponentAdapter.h  ComponentAdapterAtomic.cpp  ComponentAdapterAtomic.h  ComponentAdapterComposite.cpp  ComponentAdapterComposite.h  ComponentAdapterLocalProxy.h  ComponentAdapterRemoteProxy.cpp  ComponentAdapterRemoteProxy.h  ComponentLoader.h  ComponentLoaderDll.cpp  ComponentLoaderDll.h  ComponentLocator.cpp  ComponentLocator.h  ComponentManager.cpp  ComponentManager.h  ComponentPortConnector.cpp  ComponentPortConnector.h  ComponentRequestWorker.cpp  ComponentRequestWorker.h  ComponentRequester.cpp  ComponentRequester.h  ComponentVerifier.cpp  ComponentVerifier.h  CompositeInputDataPort.cpp  CompositeInputDataPort.h  CompositeInputEventPort.cpp  CompositeInputEventPort.h  CoordinationUnit.cpp  CoordinationUnit.h  ExecutorInterface.h  ExecutorManager.h  ExecutorManagerShared.cpp  ExecutorManagerShared.h  ExecutorShared.h  NodeInfo.cpp  NodeInfo.h  NodeLocator.cpp  NodeLocator.h  ThreadWork.h  (+4 more)
src/system/config/: Config.cpp  Config.h  ConfigLoader.cpp  ConfigLoader.h  ConfigLoaderFactory.cpp  ConfigLoaderFactory.h  Configurable.h
src/system/console/: ConsoleProcessor.cpp  ConsoleProcessor.h  TelnetConsole.cpp  TelnetConsole.h  TelnetConsoleWorker.cpp  TelnetConsoleWorker.h
src/system/control/: AppController.cpp  AppController.h  ComponentController.cpp  ComponentController.h  ControlInterface.h  Controller.h  ControllerManager.cpp  ControllerManager.h  EngineController.cpp  EngineController.h
src/system/deploy/: ApplicationPackage.cpp  ApplicationPackage.h  ComponentPackage.cpp  ComponentPackage.h  Package.cpp  Package.h  PackageDeployer.cpp  PackageDeployer.h  PackageManager.cpp  PackageManager.h  TarManager.cpp  TarManager.h
src/system/io/: IoAcceptor.cpp  IoAcceptor.h  IoConnection.cpp  IoConnection.h  IoConnectionHandler.h  IoConnector.cpp  IoConnector.h  IoEventHandler.h  IoEventProcessor.cpp  IoEventTarget.h  (+14 more)
src/task/: ReadMeForTask.txt  TaskModelBinder.cpp  TaskModelBinder.h
win/: OCEWin.cpp  stdafx.cpp
(+225 files in other folders)
