set (MY_COMPONENT_NAME RobotController)
set (CDL_NAME OPRoSCDL)
cmake_minimum_required(VERSION 2.6)
PROJECT(${MY_COMPONENT_NAME})

FILE(GLOB_RECURSE SRCS src/*.cpp)

SET(OPROS_HOME "../..")

SET(CMAKE_INSTALL_PREFIX "d:/out/install")

INCLUDE_DIRECTORIES(
        ${PROJECT_SOURCE_DIR}/include
        ${PROJECT_SOURCE_DIR}/src
        ${OPROS_HOME}/include
        ${MY_INCLUDE_DIRS}
)

ADD_LIBRARY(${MY_COMPONENT_NAM} SHARED ${SRCS})

ADD_DEFINITIONS(-DEXECUTOR_USE_ADAPTOR -DNO_VERIFY_COMPONENT -DNO_BOOST -DMAKE_COMPONENT_DLL)
TARGET_LINK_LIBRARIES(${MY_COMPONENT_NAME} OPRoSCDL)