set (MY_COMPONENT_NAME DroneState)
cmake_minimum_required(VERSION 2.6)
PROJECT(${MY_COMPONENT_NAME})

set (PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB_RECURSE PR1_SRCS ${PROJECT_SOURCE_DIR}/src/*.cpp ${PROJECT_SOURCE_DIR}/src/*.h)

IF (OPROS_HOME)
ELSE()
SET(OPROS_HOME "../../../")
ENDIF()

set_property(DIRECTORY PROPERTY INCLUDE_DIRECTORIES " ${OPROS_HOME}/include")

INCLUDE_DIRECTORIES(
        ${PROJECT_SOURCE_DIR}/include        
	${PROJECT_SOURCE_DIR}/src
        ${OPROS_HOME}/include
        ${MY_INCLUDE_DIRS})

LINK_DIRECTORIES(
${OPROS_HOME}/bin
)
ADD_LIBRARY(${MY_COMPONENT_NAME} SHARED ${PR1_SRCS})

ADD_DEFINITIONS(-DEXECUTOR_USE_ADAPTOR -DNO_VERIFY_COMPONENT -DNO_BOOST -DMAKE_COMPONENT_DLL)

TARGET_LINK_LIBRARIES(${MY_COMPONENT_NAME} OPRoSCDL)
